Only deploy to tomcat if it is running